--- a/package.json
+++ b/package.json
@@ -1,29 +1,49 @@
 {
-  "name": "venus-custom-ui",
+  "name": "jl-custom-ui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:css": "npx gulp sass copyfont",
+    "build:copyfont": "npx gulp copyfont",
+    "build:js": "webpack --config ./webpack.component.js",
+    "build:all": "npm run build:js && npm run build:css"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.12.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@tencent/eslint-config-tencent": "^1.0.4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^6.8.1",
+    "del": "^7.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-path-alias": "^1.2.1",
+    "gulp-replace": "^1.1.4",
+    "gulp-sass": "^5.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "url-loader": "^4.1.1",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^4.5.0"
   }
 }
