--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jl-custom-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "description": "组件库测试",
   "main": "./dist/index.umd.js",
@@ -41,7 +41,7 @@
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^4.0.0",
-    "gulp-minify-css": "^1.2.4",
+    "gulp-cssmin": "^0.2.0",
     "gulp-path-alias": "^1.2.1",
     "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
